--- a/servico/api/clinica.vacinacao.api.vacina.lote/pom.xml
+++ b/servico/api/clinica.vacinacao.api.vacina.lote/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com</groupId>
-	<artifactId>clinica.vacinacao.gateway</artifactId>
+	<artifactId>clinica.vacinacao.api.vacina.lote</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>clinica.vacinacao.gateway</name>
-	<description>Gateway para as apis clinica vacinacao</description>
+	<name>clinica.vacinacao.api.vacina.lote</name>
+	<description>Api cliente da clinica vacinacao</description>
 	<properties>
 		<java.version>1.8</java.version>
 		<swagger.version>2.9.2</swagger.version>
@@ -25,10 +25,20 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-webflux</artifactId>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 		<!-- dependency swagger -->
 		<dependency>
 			<groupId>io.swagger</groupId>
@@ -46,17 +56,6 @@
 			<version>${swagger.version}</version>
 		</dependency>
 		<!-- finish dependency swagger -->
-
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
 	</dependencies>
 
 </project>
